# CARBON-DPI-

./: .env.example  .gitignore  Caddyfile  GGG.MD  README.md  autopsy_report.md  codebase_autopsy.md  deep_test.js  docker-compose.yml  gen-certs.sh  implementation_plan.md  init-multiple-databases.sh  package-lock.json  package.json  task.md
.github/workflows/: ci.yml
carbon-dpi-api/: README.md  openapi.yaml
carbon-dpi-beckn-adapter/: .env.example  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json
carbon-dpi-beckn-gateway/: Dockerfile  README.md  package-lock.json  package.json
carbon-dpi-event-bus/: .env.example  Dockerfile  README.md  package-lock.json  package.json  test_event_bus.py
carbon-dpi-methodologies/: README.md
carbon-dpi-reference-ev/: README.md  package-lock.json  package.json
carbon-dpi-reference-msme/: LICENSE  README.md  package-lock.json  package.json
carbon-dpi-reference-node/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  test_e2e.py
carbon-dpi-reference-solar/: README.md  package-lock.json  package.json  tsconfig.json
carbon-dpi-registry/: .dockerignore  .env.example  Dockerfile  README.md  package-lock.json  package.json  test_registry.py
carbon-dpi-sdk-js/: README.md  package-lock.json  package.json
carbon-dpi-sdk-python/: README.md  pyproject.toml
carbon-dpi-sdk-python/carbon_dpi/: __init__.py  sdk.py
carbon-dpi-sdk-python/tests/: test_sdk.py
carbon-dpi-spec/: CONTRIBUTING.md  README.md
scripts/: setup.js
(+35 files in other folders)
