[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "carbon-dpi"
version = "1.0.0"
description = "Python SDK for the Carbon DPI protocol layers"
readme = "README.md"
authors = [
    { name = "Carbon DPI Contributors" }
]
license = { text = "Apache-2.0" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "cryptography>=41.0.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["carbon_dpi*"]
